Bug 1816388 - Use NS_AsyncCopy directly in FileSystemWritableFileStream::Write. r=dom-storage-reviewers,janv

Differential Revision: https://phabricator.services.mozilla.com/D169609