dom/fs/include/fs/FileSystemConstants.h
@@ -13,6 +13,8 @@ namespace mozilla::dom::fs {
 
 constexpr nsLiteralString kRootName = u"root"_ns;
 
+constexpr uint32_t kStreamCopyBlockSize = 1024 * 1024;
+
 }  // namespace mozilla::dom::fs
 
 #endif  // DOM_FS_FILESYSTEMCONSTANTS_H_
